[gd_scene load_steps=4 format=3 uid="uid://ckhlefc2g5yes"]

[ext_resource type="Script" uid="uid://dbq86gf5ypn1o" path="res://Scripts/Interfaces/tile_button.gd" id="1_4ebpr"]
[ext_resource type="Script" uid="uid://b8wxkf3c2b2sk" path="res://Scripts/Interfaces/tile_puzzle_interface.gd" id="1_306ms"]
[ext_resource type="Script" uid="uid://dpv1q0sjy6gqd" path="res://Scripts/Interfaces/tile_puzzle_level_label.gd" id="3_07w82"]

[node name="TilePuzzleInterface" type="Node2D"]
script = ExtResource("1_306ms")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TileButton" type="Button" parent="."]
offset_left = -516.0
offset_top = -200.0
offset_right = -416.0
offset_bottom = -100.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton2" type="Button" parent="."]
offset_left = -516.0
offset_top = -90.0
offset_right = -416.0
offset_bottom = 10.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton3" type="Button" parent="."]
offset_left = -516.0
offset_top = 20.0
offset_right = -416.0
offset_bottom = 120.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton4" type="Button" parent="."]
offset_left = -516.0
offset_top = 130.0
offset_right = -416.0
offset_bottom = 230.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton5" type="Button" parent="."]
offset_left = -399.0
offset_top = -200.0
offset_right = -299.0
offset_bottom = -100.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton6" type="Button" parent="."]
offset_left = -399.0
offset_top = -90.0
offset_right = -299.0
offset_bottom = 10.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton7" type="Button" parent="."]
offset_left = -399.0
offset_top = 20.0
offset_right = -299.0
offset_bottom = 120.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton8" type="Button" parent="."]
offset_left = -399.0
offset_top = 130.0
offset_right = -299.0
offset_bottom = 230.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton9" type="Button" parent="."]
offset_left = -281.0
offset_top = -200.0
offset_right = -181.0
offset_bottom = -100.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton10" type="Button" parent="."]
offset_left = -281.0
offset_top = -90.0
offset_right = -181.0
offset_bottom = 10.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton11" type="Button" parent="."]
offset_left = -281.0
offset_top = 20.0
offset_right = -181.0
offset_bottom = 120.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton12" type="Button" parent="."]
offset_left = -281.0
offset_top = 130.0
offset_right = -181.0
offset_bottom = 230.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton13" type="Button" parent="."]
offset_left = -165.0
offset_top = -200.0
offset_right = -65.0
offset_bottom = -100.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton14" type="Button" parent="."]
offset_left = -165.0
offset_top = -90.0
offset_right = -65.0
offset_bottom = 10.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton15" type="Button" parent="."]
offset_left = -165.0
offset_top = 20.0
offset_right = -65.0
offset_bottom = 120.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton16" type="Button" parent="."]
offset_left = -165.0
offset_top = 130.0
offset_right = -65.0
offset_bottom = 230.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton17" type="Button" parent="."]
offset_left = -50.0
offset_top = -200.0
offset_right = 50.0
offset_bottom = -100.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton18" type="Button" parent="."]
offset_left = -50.0
offset_top = -90.0
offset_right = 50.0
offset_bottom = 10.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton19" type="Button" parent="."]
offset_left = -50.0
offset_top = 20.0
offset_right = 50.0
offset_bottom = 120.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton20" type="Button" parent="."]
offset_left = -50.0
offset_top = 130.0
offset_right = 50.0
offset_bottom = 230.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton21" type="Button" parent="."]
offset_left = 66.0
offset_top = -200.0
offset_right = 166.0
offset_bottom = -100.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton22" type="Button" parent="."]
offset_left = 66.0
offset_top = -90.0
offset_right = 166.0
offset_bottom = 10.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton23" type="Button" parent="."]
offset_left = 66.0
offset_top = 20.0
offset_right = 166.0
offset_bottom = 120.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton24" type="Button" parent="."]
offset_left = 66.0
offset_top = 130.0
offset_right = 166.0
offset_bottom = 230.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton25" type="Button" parent="."]
offset_left = 180.0
offset_top = -200.0
offset_right = 280.0
offset_bottom = -100.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton26" type="Button" parent="."]
offset_left = 180.0
offset_top = -90.0
offset_right = 280.0
offset_bottom = 10.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton27" type="Button" parent="."]
offset_left = 180.0
offset_top = 20.0
offset_right = 280.0
offset_bottom = 120.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton28" type="Button" parent="."]
offset_left = 180.0
offset_top = 130.0
offset_right = 280.0
offset_bottom = 230.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton29" type="Button" parent="."]
offset_left = 297.0
offset_top = -200.0
offset_right = 397.0
offset_bottom = -100.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton30" type="Button" parent="."]
offset_left = 297.0
offset_top = -90.0
offset_right = 397.0
offset_bottom = 10.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton31" type="Button" parent="."]
offset_left = 297.0
offset_top = 20.0
offset_right = 397.0
offset_bottom = 120.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton32" type="Button" parent="."]
offset_left = 297.0
offset_top = 130.0
offset_right = 397.0
offset_bottom = 230.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton33" type="Button" parent="."]
offset_left = 407.0
offset_top = -200.0
offset_right = 507.0
offset_bottom = -100.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton34" type="Button" parent="."]
offset_left = 407.0
offset_top = -90.0
offset_right = 507.0
offset_bottom = 10.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton35" type="Button" parent="."]
offset_left = 407.0
offset_top = 20.0
offset_right = 507.0
offset_bottom = 120.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton36" type="Button" parent="."]
offset_left = 407.0
offset_top = 130.0
offset_right = 507.0
offset_bottom = 230.0
toggle_mode = true
script = ExtResource("1_4ebpr")
metadata/_edit_use_anchors_ = true

[node name="TileButton37" type="Button" parent="."]
offset_left = -150.0
offset_top = 300.0
offset_right = 150.0
offset_bottom = 400.0
theme_override_font_sizes/font_size = 25
toggle_mode = true
text = "Back"
metadata/_edit_use_anchors_ = true

[node name="TilePuzzleLevelLabel" type="Label" parent="."]
offset_left = -950.0
offset_top = -525.0
offset_right = -910.0
offset_bottom = -388.0
theme_override_font_sizes/font_size = 100
script = ExtResource("3_07w82")

[connection signal="pressed" from="TileButton37" to="." method="_on_tile_button_37_pressed"]
